# a2acp

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  VERIFICATION.md  a2a-bridge-analysis.md  a2a-bridge-ecosystem.md  check_boxerr  check_okor  check_pathbuf  check_vecstr  deny.toml  rust-toolchain.toml  seam-discipline.md
.github/: labels.yml  (+1 more)
crates/bridge-a2a-inbound/: Cargo.toml
crates/bridge-a2a-inbound/src/: card.rs  fanout.rs  lib.rs  reattach.rs  server.rs  session_manager.rs  sse.rs  workflow_sink.rs
crates/bridge-a2a-inbound/tests/: golden_wire.rs  workflow_producer.rs
crates/bridge-a2a-inbound/tests/wire_corpus/: send_message_cold_agent.json  send_message_warm_first_turn.json  send_message_warm_second_turn.json
crates/bridge-a2a-outbound/: Cargo.toml
crates/bridge-a2a-outbound/src/: client.rs  lib.rs  sse.rs  testpeer.rs
crates/bridge-acp/: Cargo.toml
crates/bridge-acp/src/: acp_backend.rs  framing.rs  kiro.rs  lib.rs  model_effort.rs  replay.rs  supervisor.rs
crates/bridge-acp/tests/: container_reap_compat.rs  corpus_replay.rs  golden_frames.rs
crates/bridge-acp/tests/corpus/: README.md  claude-agent-acp.jsonl  codex-acp.jsonl  gemini-cli.jsonl  kiro-cli.jsonl
crates/bridge-api/: Cargo.toml
crates/bridge-api/src/: backend.rs  config.rs  lib.rs  provider.rs  tool.rs  wire.rs
crates/bridge-api/tests/: corpus_replay.rs  deny_through_translator.rs  live_ollama.rs  r2b3_api_diagnostics.rs  wiremock_turns.rs
crates/bridge-api/tests/fixtures/: ollama-openai-compat.json
crates/bridge-claude/: Cargo.toml
crates/bridge-claude/src/: config.rs  lib.rs  proc.rs  wire.rs
crates/bridge-claude/src/backend/: mod.rs  reaper.rs
crates/bridge-claude/tests/: backend_prompt.rs  cancel.rs  harness_smoke.rs  pool_reap.rs  proc_reader.rs  reap_race.rs  retire_admit.rs  wire_golden.rs
crates/bridge-claude/tests/harness/: mod.rs
crates/bridge-container/: Cargo.toml
crates/bridge-container/src/: lib.rs
crates/bridge-controller/: Cargo.toml
crates/bridge-controller/src/: implement.rs  implement_resume.rs  lib.rs  merge.rs  resilient.rs  review.rs  turn.rs  tweak.rs  verify.rs
crates/bridge-coordinator/: Cargo.toml
crates/bridge-coordinator/src/: batch.rs  clock.rs  compact.rs  coordinator.rs  detached.rs  dispatch.rs  lib.rs  params.rs  session_manager.rs  turn_parts.rs
crates/bridge-core/: Cargo.toml
crates/bridge-core/src/: catalog.rs  diagnostics.rs  domain.rs  error.rs  ids.rs  lib.rs  liveness.rs  mcp.rs  orch.rs  permission.rs  ports.rs  process.rs  profile.rs  provider.rs  reaper.rs  run_identity.rs  sandbox.rs  session.rs  session_cwd.rs  session_fingerprint.rs  task.rs  task_spec.rs  task_store.rs  translator.rs
crates/bridge-core/tests/: compile_fail.rs  r2b1_diagnostics.rs  r2b2_observers.rs  r2b2_warm_survivability.rs
crates/bridge-mcp/: Cargo.toml
crates/bridge-mcp/src/: framing.rs  lib.rs  server.rs  transport.rs
crates/bridge-mcp/tests/: mcp_client.rs
crates/bridge-registry/: Cargo.toml
crates/bridge-registry/src/: lib.rs  registry.rs
crates/bridge-store/: Cargo.toml
crates/bridge-store/src/: lib.rs  sqlite.rs
crates/bridge-workflow/: Cargo.toml
crates/bridge-workflow/src/: executor.rs  graph.rs  lib.rs  template.rs
crates/bridge-workflow/tests/: workflow_context_compat.rs
crates/bridge-worktree/: Cargo.toml
crates/bridge-worktree/src/: backend.rs  host_git.rs  lib.rs  provider.rs  provider_path.rs  sweep.rs
docs/: README.md  (+23 more)
evals/: .gitignore  2026-07-05-coordinator-migration-livegate.md  README.md  pyproject.toml
evals/ci/: test_config.py  test_integrity.py  test_metrics.py  test_normalize.py
evals/configs/: eval-agents.toml
evals/harness/: check_taskset.py  config.py  judge.py  metrics.py  normalize.py  report.py  runner.py
evals/results/: .gitignore
evals/results/baselines/2026-07-04-review-seeded-v1/: metrics.json  report.md  run_manifest.json  spotcheck.md  spotcheck.yaml  trace.jsonl
evals/results/baselines/2026-07-04-review-seeded-v1/calls/: claude-solo-rc-01.json  claude-solo-rc-01.md  claude-solo-rc-02.json  claude-solo-rc-02.md  claude-solo-rc-03.json  claude-solo-rc-03.md  claude-solo-rc-04.json  claude-solo-rc-04.md  claude-solo-rs-01.json  claude-solo-rs-01.md  claude-solo-rs-02.json  claude-solo-rs-02.md  claude-solo-rs-03.json  claude-solo-rs-03.md  claude-solo-rs-04.json  claude-solo-rs-04.md  claude-solo-rs-05.json  claude-solo-rs-05.md  claude-solo-rs-06.json  claude-solo-rs-06.md  claude-solo-rs-07.json  claude-solo-rs-07.md  claude-solo-rs-08.json  claude-solo-rs-08.md  claude-solo-rs-09.json  claude-solo-rs-09.md  claude-solo-rs-10.json  claude-solo-rs-10.md  claude-solo-rs-11.json  claude-solo-rs-11.md  codex-solo-rc-01.json  codex-solo-rc-01.md  codex-solo-rc-02.json  codex-solo-rc-02.md  codex-solo-rc-03.json  codex-solo-rc-03.md  codex-solo-rc-04.json  codex-solo-rc-04.md  codex-solo-rs-01.json  codex-solo-rs-01.md  (+50 more)
evals/results/baselines/2026-07-04-review-seeded-v1/judge/: claude-solo-rc-01.json  claude-solo-rc-02.json  claude-solo-rc-03.json  claude-solo-rc-04.json  claude-solo-rs-01.json  claude-solo-rs-02.json  claude-solo-rs-03.json  claude-solo-rs-04.json  claude-solo-rs-05.json  claude-solo-rs-06.json  claude-solo-rs-07.json  claude-solo-rs-08.json  claude-solo-rs-09.json  claude-solo-rs-10.json  claude-solo-rs-11.json  codex-solo-rc-01.json  codex-solo-rc-02.json  codex-solo-rc-03.json  codex-solo-rc-04.json  codex-solo-rs-01.json  codex-solo-rs-02.json  codex-solo-rs-03.json  codex-solo-rs-04.json  codex-solo-rs-05.json  codex-solo-rs-06.json  codex-solo-rs-07.json  codex-solo-rs-08.json  codex-solo-rs-09.json  codex-solo-rs-10.json  codex-solo-rs-11.json  duo-rc-01.json  duo-rc-02.json  duo-rc-03.json  duo-rc-04.json  duo-rs-01.json  duo-rs-02.json  duo-rs-03.json  duo-rs-04.json  duo-rs-05.json  duo-rs-06.json  (+5 more)
evals/rubrics/: review_judge.md
evals/tasksets/review-seeded-v1/: .gitignore  manifest.yaml
evals/tasksets/review-seeded-v1/items/rc-01/: context.md  diff.patch  truth.yaml
(+619 files in other folders)
