[workspace]
resolver = "2"
members = ["crates/*", "bin/a2a-bridge"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
rust-version = "1.94"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io", "compat"] }
axum = "0.7"
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
libc = "0.2"
futures = "0.3"
async-stream = "0.3"

# Protocol SDKs — pinned exact versions verified 2026-07-02
# a2a-lf is the crates.io package name for the `a2a` crate in a2aproject/a2a-rs
# agent-client-protocol: wired in Increment 3a via AcpBackend (bridge-acp) — drives the
# conformant SDK initialize/prompt/cancel path. The legacy KiroBackend JSON-RPC framing over
# serde_json + the in-house FrameReader is retained for keep-green (see ADR-0003 Addendum 2).
agent-client-protocol = "=1.0.1"
a2a = { package = "a2a-lf", version = "=0.3.0" }

# Dev-only deps live in [workspace.dependencies] (Cargo has no workspace.dev-dependencies);
# member crates opt in via `trybuild.workspace = true` under their own [dev-dependencies].
trybuild = "1"
tokio-test = "0.4"
toml = "0.8"
arc-swap = "1"
notify = "6"

# lsp-mcp (L3): the LSP-over-MCP nav shim. clap/anyhow/lsp-types are new to the workspace.
clap = { version = "4", features = ["derive"] }
anyhow = "1"
lsp-types = "0.97"
