[package]
name = "bridge-a2a-inbound"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bridge-core = { path = "../bridge-core" }
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
futures.workspace = true
axum.workspace = true
tower.workspace = true
a2a.workspace = true

[dev-dependencies]
tower.workspace = true
