[package]
name = "bridge-a2a-inbound"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bridge-core = { path = "../bridge-core" }
bridge-coordinator = { path = "../bridge-coordinator" }
bridge-workflow = { path = "../bridge-workflow" }
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream.workspace = true
async-stream.workspace = true
futures.workspace = true
arc-swap.workspace = true
axum.workspace = true
tower.workspace = true
a2a.workspace = true

[dev-dependencies]
tower.workspace = true
async-stream.workspace = true
