[package]
name = "bridge-a2a-outbound"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bridge-core = { path = "../bridge-core" }
async-trait = { workspace = true }
a2a = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true }
wiremock = "0.6"
