[package]
name = "bridge-acp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# `unstable_session_usage` models the `usage_update` SessionUpdate variant. WITHOUT it the SDK's
# internally-tagged `SessionUpdate` enum (no `#[serde(other)]`) HARD-FAILS to deserialize an agent's
# `session/update` of variant `usage_update` and auto-emits a spurious `-32602` back to the agent, which
# stalls the turn → the `end_turn` result never arrives → a multi-minute hang (live-found vs claude-agent-acp,
# which now sends `usage_update{cost}`). With the feature on, the variant deserializes and is dropped as an
# unmodeled update by `map_session_update`. The variant already ships in the pinned 0.12.1 — feature only, no bump.
agent-client-protocol = { workspace = true, features = ["unstable_session_usage"] }
bridge-core = { path = "../bridge-core" }
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tokio-util = { workspace = true }
libc = { workspace = true }
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
