[package]
name = "bridge-acp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# ACP SDK 1.x made model/config and streaming UsageUpdate surfaces stable, but auth methods
# and terminal PromptResponse.usage still ride feature gates. Keep both enabled: auth
# methods drive login selection, and terminal usage carries per-turn token totals.
agent-client-protocol = { workspace = true, features = [
    "unstable_auth_methods",
    "unstable_end_turn_token_usage",
] }
bridge-core = { path = "../bridge-core" }
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tokio-util = { workspace = true }
libc = { workspace = true }
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
