[package]
name = "bridge-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bridge-core = { path = "../bridge-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
async-stream.workspace = true
futures.workspace = true
httpdate = "1"
tokio = { workspace = true }
tokio-stream.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
wiremock = "0.6"
