[package]
name = "bridge-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# The controller-loop primitives extracted from the bin crate (roadmap #9):
# ports (TweakEffects/TurnRunner/CheckpointSink/WarmRebuild), the pure
# review->tweak loops, git/verify/checkpoint primitives, and the resolved
# VerifyConfig/MergeConfig input contracts. Composition + effects adapters stay
# in bin/a2a-bridge. See docs/superpowers/specs/2026-07-05-bridge-controller-extraction.md.

[dependencies]
bridge-core = { path = "../bridge-core" }
bridge-workflow = { path = "../bridge-workflow" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio-stream = { workspace = true }
