[package]
name = "bridge-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-clock = []

[dependencies]
bridge-core = { path = "../bridge-core" }
tokio = { workspace = true }

[dev-dependencies]
async-trait.workspace = true
futures.workspace = true
tokio-stream.workspace = true
