[package]
name = "bridge-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bridge-core = { path = "../bridge-core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures.workspace = true
async-stream.workspace = true
tokio-stream.workspace = true
serde = { workspace = true }
async-trait = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
serde_json = { workspace = true }
