[package]
name = "bridge-worktree"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bridge-core = { path = "../bridge-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
